corrected the structure

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
 numpy
 scipy
-matplotlib
 pytest
+scikit-image
+tqdm
+mpi4py
+
+tools21cm
+
+matplotlib
 cmasher
 
 # needed for readthedocs
@@ -11,15 +17,5 @@ numpydoc
 sphinx-rtd-theme
 sphinx_readable_theme
 sphinx>=2.3
-
-
-
-# pip install scikit-image
-# pip install matplotlib 
-# pip install scipy 
-# pip install tqdm 
-# pip install mpi4py
-# Pip install tools21cm
-# pip install cmasher (to plot lightcones)
 
 # For mpi4py, in a virtual env : conda install -c conda-forge mpi4py
